css/shanti-main.css
/* ... */
.shanti-thumbnail-image a:hover .overlay{background:rgba(0,0,0,0.7000);}
.shanti-thumbnail-image a .overlay::before{font-family:'shanticon';color:rgba(255,255,255,0.0001);font-size: 2.5em;line-height: 1.75em;text-align:center;height:5em;content:'\e60a';-webkit-transition:all 300ms ease;-moz-transition:all 300ms ease;-ms-transition:all 300ms ease;-o-transition:all 300ms ease;transition:all 300ms ease;}
.shanti-thumbnail-image.shanti-field-video a .overlay::before{content:'\e63b';}
.shanti-thumbnail-image a:hover .overlay::before{color:rgba(255,255,255,0.6000);font-size:4em !important;}
.shanti-thumbnail-image a:active .overlay::before{color:rgba(255,255,255,0.7500);}
.shanti-thumbnail-info{font-size:.75em;font-family:helvetica,arial,sans-serif;}
.shanti-thumbnail .body-wrap{padding:.35rem .8rem .6rem 0.9rem;overflow-x:auto;height:12.5rem;}
.shanti-thumbnail-link{/* video title */font-size:1em;line-height:1.38em;font-weight:bold;margin:0.2rem 0;}
.shanti-thumbnail-link:hover,
.shanti-thumbnail-link:active{color:rgba(90,101,209,.9000);-webkit-box-shadow:none;box-shadow:none;}
.shanti-field-group-audience a{font-size:0.93em;line-height:1.38em;}
.shanti-field-group-audience a:hover,
.shanti-field-group-audience a:active{text-decoration:underline;}
.shanti-field-group-audience a.shanti-thumbnail-link+a::before{font-family:'Glyphicons Halflings';content:'\e144';color:#666;font-size:1.25em;width:1.32em;height:1.32em;display:inline-block;margin-right:0.2rem;position:relative;left:0.1rem;top:0.05rem;}
.shanti-field-duration span::before,
.shanti-field-created span::before{font-family:'shanticon';content:'\e63b';font-size:120%;font-weight:normal;position:relative;left:0.1rem;top:0.1rem;margin-right:0.3rem;}
.shanti-field-duration span::before{content:'\e61c';}
.shanti-field-created span::before{content:'\e60c';margin-right:0.6rem;}
.shanti-field-duration,
.shanti-field-created{color:#222;font-family:'droidserif',palatino,'Palatino Linotype',georgia,serif;}
.shanti-thumbnail .footer-wrap{position:absolute;bottom:0;background:#f6f6f6;border-top:1px solid #e6e6e6;border-radius:0 0 .32em .32em;background-clip:padding-box;width:100%;display:block;padding:.32em 1em 0 .88em;color:#787878;height:2.5em;}
.shanti-thumbnail .footer-wrap a{display:inline;}
.shanti-thumbnail .footer-wrap a:hover,
.shanti-thumbnail .footer-wrap a:active{text-decoration:underline;}
.shanti-thumbnail .footer-wrap .icon{font-size:1.32em;position:relative;top:2px;}
.shanti-gallery .ajax-progress{ display:none; position:absolute; top:5rem; left:50%;}
/*-------------------------*/
/*--- END video gallery ---*/
/*-------------------------*/








/*--------------------------------*/
/*----- BEGIN new from kmaps -----*/
/*--------------------------------*/
.pager { float: inherit; text-align: center;}
li.pager-current.widget > form,
li.pager-current.widget > form div,
li.pager-current.widget > form input{ display: inline;}
li.pager-current.widget > form input.form-control { width: 100px;}

#photo-pagination{ float: left; margin-right: 10px; margin-top: 10px;}
#photo-pagination li{ display: inline; padding: 0 5px;}
#photo-pagination li input.page-input{ width: 45px;text-align: center;height: 22px;}
#photo-pagination li.first-page,
#photo-pagination li.last-page,
#photo-pagination li.previous-page,
#photo-pagination li.next-page { font-size: smaller;}
#tab-main .paginated-spin{ float: left; display: inline-block; margin-top: 10px; display: none;}
#photo-pagination>li>a{ color: #DC3C47;}
#photo-pagination>.active>a,
#photo-pagination>.active>span,
#photo-pagination>.active>a:hover,
#photo-pagination>.active>span:hover,
#photo-pagination>.active>a:active,
#photo-pagination>.active>span:active{ background-color: #DC3C47;border-color: #DC3C47;color: white;}\

/* Photos subsection */
#tab-main .related-photos {overflow: auto;}
#tab-main .each-photo,
#tab-main .each-text { width: 100px; float: left; margin-right: 15px; margin-bottom: 10px;}
#tab-main .each-photo a.thumbnail:hover,
#tab-main .each-text a.thumbnail:hover { /* see custom theme colors */}

/**** kmaps side-col ****/
.content-resources{padding-left:0;padding-right:0;padding-top:0;margin-left:-2rem;max-width:16em;background:#fff;min-height:700px;height:100%;background-image:-webkit-linear-gradient(left,#ccc 0,#ccc 9px,#fff 10px);background-image:-moz-linear-gradient(left,#ccc 0,#ccc 9px,#fff 10px);background-image:-ms-linear-gradient(left,#ccc 0,#ccc 9px,#fff 10px);background-image:-o-linear-gradient(left,#ccc 0,#ccc 9px,#fff 10px);background-image:linear-gradient(left,#ccc 0,#ccc 9px,#fff 10px);}
.content-resources .nav-pills{font-weight:bold;text-transform:uppercase;margin:0;}
.content-resources .nav-pills li{ border-left:10px solid transparent; margin:0;padding:0;font-size:1em;line-height:3em;height:3em;position: relative;white-space:nowrap;}
.content-resources .nav-pills li.active{ /* see custom theme colors */}
.content-resources .nav-pills li a{ display:block;padding:0 0 0 1.2rem;background:#fff;font-size:.75em;line-height:4.4em;height:4em;border:none;border-radius:0; border-bottom:1px solid #e0e0e0; -webkit-transition:background 300ms ease-out;-moz-transition:background 300ms ease-out;-o-transition:background 300ms ease-out;transition:background 300ms ease-out;font-family:'museo-sans-700',helvetica,arial,sans-serif;font-weight:bold;}
.content-resources .nav-pills li:first-child a{ /*border-top:1px solid #e0e0e0;*/}
.content-resources .nav-pills li a,
.content-resources .nav-pills li a:hover,
.content-resources .nav-pills li a:active{color:#777;}
.content-resources .nav-pills li a:hover,
.content-resources .nav-pills li a:active{color:#333;background:#eee;}
.content-resources .nav-pills li.active a{color:#333;background:#eee;}
/* ... */

